--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: postgres
-  password: root
+  password: admin
   host: localhost
 
 development:
@@ -35,7 +35,7 @@ development:
   username: postgres
 
   # The password associated with the postgres role (username).
-  password: root
+  password: admin
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
